[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["zxk7516 <zxk7516@foxmail.com>"]

[dependencies]
diesel = { version = "0.15.0", features = ["mysql"] }
diesel_codegen = { version = "0.15.0", features = ["mysql"] }
dotenv = "0.9.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

r2d2 = "*"
r2d2-diesel = "*"
r2d2_mysql = "7"
